--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
     <h1>Welcome To</h1>
-    <h1>Mustakim World</h1>
+    <h1><span class="name">Mustakim</span> World</h1>
+    <h3>Learn about me</h3>
+    <p>I am a hardworking and ambitious individual with a great passion for the transport and logistics industry. I am currently in my second year of studying BA Logistics and Supply Chain Management at Aston University. I have excellent communication skills, enabling me to effectively communicate with a wide range of people. I am seeing a part-time position in the industry in which I can put into practice my knowledge and experience, ultimately benefiting the operations of the organisation that I work for.a</p>
     
 </body>
 </html>
