--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-up">
     <div class="add">
     <h1>Welcome To</h1>
     <h1><span class="name">Mustakim</span> World</h1>
@@ -23,6 +23,16 @@
     <img src="images/my-pic.png" alt="">
 </div>
 </section>
-    
+    <section class="top-doun">
+        <div class="add"class="add">
+            <img src="images/my-pic2.png" alt="">
+        </div>
+    <div class="add">
+        <h1>Big Dream Life</h1>
+        <h2>Bcome a web devlopment</h2>
+        <p>I am an enthusiastic, hard-working and disciplined Catering Assistant with excellent track-record in working in the food industry. I am a friendly individual with a great passion for food; I enjoy socialising with people</p>
+        <a class="button" target="_blank" href="https://www.youtube.com/@mustakimalfarabi3844">VISIT YOUTUBE</a>
+    </div>
+    </section>
 </body>
 </html>
