--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-up">
+    <section class="top-up lavel-up">
     <div class="add">
     <h1>Welcome To</h1>
     <h1><span class="name">Mustakim</span> World</h1>
@@ -23,7 +23,7 @@
     <img src="images/my-pic.png" alt="">
 </div>
 </section>
-    <section class="top-doun">
+    <section class="top-doun lavel-up">a
         <div class="add"class="add">
             <img src="images/my-pic2.png" alt="">
         </div>
@@ -32,7 +32,24 @@
         <h2>Bcome a web devlopment</h2>
         <p>I am an enthusiastic, hard-working and disciplined Catering Assistant with excellent track-record in working in the food industry. I am a friendly individual with a great passion for food; I enjoy socialising with people</p>
         <a class="button" target="_blank" href="https://www.youtube.com/@mustakimalfarabi3844">VISIT YOUTUBE</a>
+        </section>
     </div>
+    <section class="about">
+        <h1 id="tyoo">About My Self</h1>
+        <div class="lavel-up">
+            <div id="jk" class="school">
+                <h1>My School Life</h1>
+                <h3 class="color">Attended primary school from 2010 to 2020</h3>
+                <P>School Life is the best time of our life as we make new friends, learn new things and build our career there. School time is the only time which we enjoy most, and when we enter college, we always miss our school life. School life teaches us lots of new things and prepares us to face all the challenges of life</P>
+            </div>
+            <div id="kj" class="school">
+                <h1>My Collage Life</h1>
+                <h3 class="color">I studied in college from 2021 to 2023</h3>
+                <p>In my college life, along with studying, I and my friends enjoyed a lot of other things. We traveled to lots of places, had new experiences, and learned many new things. Our college's canteen was a remarkable place in my college life as whenever we got time, we used to chill in the canteen.</p>
+            </div>
+        </div>
+    </section>
     </section>
 </body>
+<footer>©creat by mustakim, 2023</footer>
 </html>
